сделан блок gallery

--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/www/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>Document</title>
 </head>
 
@@ -13,7 +13,7 @@
     <div class="container">
         <header class="header">
             <div class="header-wrap">
-                <img src="/images/logo.svg" alt="логотип" class="logo-pic">
+                <a href="#" class="logo"> <img src="/images/logo.svg" alt="логотип" class="logo-pic"> </a>
                 <nav class="main-nav">
                     <ul class="main-list">
                         <li class="nav-element">
@@ -159,6 +159,8 @@
             </div>
         </section>
 
+        <hr>
+
         <section class="command">
             <div class="command-wrap">
                 <div class="command-content">
@@ -184,9 +186,10 @@
                     <img src="/images/command-pic.jpg" alt="Edward Newgate">
                 </div>
             </div>
-
-
         </section>
+
+        <hr>
+
     </div>
 </body>
 
