--- a/www/index.html
+++ b/www/index.html
@@ -163,38 +163,54 @@
 
         <section class="command">
             <div class="command-wrap">
-                <div class="command-content">
-                    <h2>Testimonials</h2>
-                    <div class="rating">
-                        <img src="/images/star.svg" alt="звезда">
-                        <img src="/images/star.svg" alt="звезда">
-                        <img src="/images/star.svg" alt="звезда">
-                        <img src="/images/star.svg" alt="звезда">
-                        <img src="/images/star.svg" alt="звезда">
-                    </div>
-                    <p class="command-text">
-                        “Quisque in lacus a urna fermentum euismod. Integer mi nibh, dapibus ac scelerisque eu, facilisis quis purus. Morbi blandit sit amet turpis nec”
-                    </p>
+                <div class="text-part">
+                    <h2>Lorem.</h2>
 
-                    <p class="text-author">
-                        Edward Newgate <br>
+                    <div class="rating">
+                        <img src="images/star.svg" alt="звезда">
+                        <img src="images/star.svg" alt="звезда">
+                        <img src="images/star.svg" alt="звезда">
+                        <img src="images/star.svg" alt="звезда">
+                        <img src="images/star.svg" alt="звезда">
+                    </div>
+
+                    <p class="about">“Quisque in lacus a urna fermentum euismod. Integer mi nibh, dapibus ac scelerisque eu, facilisis quis purus. Morbi blandit sit amet turpis nec”</p>
+
+                    <p class="author">Edward Newgate
                         <span>Founder Circle</span>
                     </p>
                 </div>
 
-                <div class="command-visual">
-                    <img src="/images/command-pic.jpg" alt="Edward Newgate">
+                <div class="photos-wrap js-slider-wrap">
+                    <div class="slider js-slider">
+                        <div class="slider-item">
+                            <img src="images/command-pic.jpg" alt="Мальчик строит замок из песка" class="command-pic">
+                        </div>
+                        <div class="slider-item">
+                            <img src="images/command-pic-2.jpg" alt="Семья стоит на берегу моря" class="command-pic">
+                        </div>
+                    </div>
+                    <div class="button-wrap">
+                        <button class="slider-btn prev js-btn-prev"></button>
+                        <button class="slider-btn next js-btn-next"></button>
+                    </div>
+
                 </div>
-            </div>
+
+
+
+
+
         </section>
 
-        <hr>
 
-    </div>
+        </div>
 </body>
 
 
 
+<script src="scripts/jquery-3.6.0.min.js"></script>
+<script src="scripts/slick.min.js"></script>
 <script src="scripts/script.js"></script>
 
 </html>
